--- a/app/src/main/res/layout/fragment_written_record.xml
+++ b/app/src/main/res/layout/fragment_written_record.xml
@@ -443,7 +443,7 @@
 
 
 
-        <EditText android:id="@+id/et_addr_detailed2"
+        <EditText android:id="@+id/et_town"
                   android:layout_width="100px"
                   android:layout_height="115px"
                   android:layout_below="@id/ll_04"
@@ -458,7 +458,7 @@
                   android:layout_below="@id/ll_04"
                   android:layout_marginTop="40px"
 
-                  android:layout_toRightOf="@id/et_addr_detailed2"
+                  android:layout_toRightOf="@id/et_town"
                   android:text="镇（乡、街道）"
                   android:textColor="@color/white"
                   android:textSize="32px"
